@@ -1051,8 +1051,10 @@ function getSelementsInfo($sysmap) {
 		));
 		$all_hosts = array_merge($all_hosts, $hosts);
 		foreach ($hosts as $host) {
-			foreach ($hosts_map[$host['hostid']] as $belongs_to_sel) {
-				$selements[$belongs_to_sel]['hosts'][$host['hostid']] = $host['hostid'];
+			if (isset($hosts_map[$host['hostid']])) {
+				foreach ($hosts_map[$host['hostid']] as $belongs_to_sel) {
+					$selements[$belongs_to_sel]['hosts'][$host['hostid']] = $host['hostid'];
+				}
 			}
 		}
 	}
@@ -1067,14 +1069,16 @@ function getSelementsInfo($sysmap) {
 		$all_hosts = array_merge($all_hosts, $hosts);
 		foreach ($hosts as $host) {
 			foreach ($host['groups'] as $group) {
-				foreach ($hostgroups_map[$group['groupid']] as $belongs_to_sel) {
-					$selements[$belongs_to_sel]['hosts'][$host['hostid']] = $host['hostid'];
+				if (isset($hostgroups_map[$group['groupid']])) {
+					foreach ($hostgroups_map[$group['groupid']] as $belongs_to_sel) {
+						$selements[$belongs_to_sel]['hosts'][$host['hostid']] = $host['hostid'];
 
-					// add hosts to hosts_map for trigger selection;
-					if (!isset($hosts_map[$host['hostid']])) {
-						$hosts_map[$host['hostid']] = array();
+						// add hosts to hosts_map for trigger selection;
+						if (!isset($hosts_map[$host['hostid']])) {
+							$hosts_map[$host['hostid']] = array();
+						}
+						$hosts_map[$host['hostid']][$belongs_to_sel] = $belongs_to_sel;
 					}
-					$hosts_map[$host['hostid']][$belongs_to_sel] = $belongs_to_sel;
 				}
 			}
 		}
@@ -1102,8 +1106,10 @@ function getSelementsInfo($sysmap) {
 		$all_triggers = array_merge($all_triggers, $triggers);
 
 		foreach ($triggers as $trigger) {
-			foreach ($triggers_map[$trigger['triggerid']] as $belongs_to_sel) {
-				$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+			if (isset($triggers_map[$trigger['triggerid']])) {
+				foreach ($triggers_map[$trigger['triggerid']] as $belongs_to_sel) {
+					$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+				}
 			}
 		}
 	}
@@ -1121,8 +1127,10 @@ function getSelementsInfo($sysmap) {
 		$all_triggers = array_merge($all_triggers, $triggers);
 
 		foreach ($triggers as $trigger) {
-			foreach ($triggers_map_submaps[$trigger['triggerid']] as $belongs_to_sel) {
-				$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+			if (isset($triggers_map_submaps[$trigger['triggerid']])) {
+				foreach ($triggers_map_submaps[$trigger['triggerid']] as $belongs_to_sel) {
+					$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+				}
 			}
 		}
 	}
@@ -1142,8 +1150,10 @@ function getSelementsInfo($sysmap) {
 
 		foreach ($triggers as $trigger) {
 			foreach ($trigger['hosts'] as $host) {
-				foreach ($hosts_map[$host['hostid']] as $belongs_to_sel) {
-					$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+				if (isset($hosts_map[$host['hostid']])) {
+					foreach ($hosts_map[$host['hostid']] as $belongs_to_sel) {
+						$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
+					}
 				}
 			}
 		}
